# GRANASH

./: CMake.txt  CMakeLists.txt  README.md  idea.md
Source/: EffectsChain.cpp  EffectsChain.h  Grain.cpp  Grain.h  GrainCloudVisualizer.cpp  GrainCloudVisualizer.h  GranularEngine.cpp  GranularEngine.h  GranularSound.h  GranularVoice.cpp  GranularVoice.h  ParameterControls.cpp  ParameterControls.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaveformDisplay.cpp
